Actual. de historico,boton copiar y desencriptador

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,26 +9,37 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="container">
-  <div class="row">
-    <h1 class="titulo">código secreto</h1>
+  
+  <div class="row mb-3">
+    <div class="col">
+      <h1 class="titulo">Codificador Challenge One</h1>
+    </div>
   </div>
+  
   <main class="main">
-    <div class="row">
-      <section class="form box">
+    <div class="row mb-3">
+      <section class="col-md-6">
         <form action="">
-          <label for="input-texto">Solo letras minúsculas, sin acento</label>
-          <input class="text-input" type="text" name="input-texto" id="input-texto" placeholder="Ingrese el texto aqui">
-          <input class="btn btn-primary" type="submit" value="encriptar!" id="btn-encriptar">
-          <input class="btn btn-success" type="submit" value="desencriptar!" id="btn-desencriptar">
+          <div class="form-group">
+            <input class="form-control" type="text" name="input-texto" id="input-texto" placeholder="Ingrese el texto aqui" aria-describedby="emailHelp">
+            <small id="emailHelp" class="form-text text-muted">Solo puede ingresarse letras minusculas y sin caracteres especiales.</small>
+          </div>
+          <input class="btn btn-primary mt-3" type="button" value="¡Encriptar!" id="btn-encriptar">
+          <input class="btn btn-success mt-3" type="button" value="¡Desencriptar!" id="btn-desencriptar">
         </form>
       </section>
-    </div>
-    
-    <div class="row">
-      <section class="msg box">
-        <h2 id="">Mensaje encriptada:</h2>
-        <input class="text-input" type="text" id="msg"></input>
-        <input class="btn btn-secondary" type="submit" value="copiar" id="btn-copy">
+      <section class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            Historico de conversiones
+          </div>
+          <div class="card-body">
+            <p class="card-text">Aun no se realizó ninguna encriptacion. Prueba hacer una!</p>
+            <ul id="lista" class="list-group mb-3">
+            </ul>
+            <a href="#" id="boton-copiar" class="btn btn-info">Copiar ultima conversion!</a>
+          </div>
+        </div>
       </section>
     </div>
     
